--- a/css/thermostat.css
+++ b/css/thermostat.css
@@ -1,3 +1,21 @@
 body {
-  font-size: 30pt;
+  font-size: 50pt;
 }
+
+#container {
+  text-align: center;
+  margin: auto;
+  margin-top: 15%;
+
+}
+
+input[type=checkbox] {
+  zoom: 4.5;
+}
+
+button {
+  font-size: 16pt;
+  border-radius: 4px;
+  background-color: #00ccff;
+}
+
