--- a/css/thermostat.css
+++ b/css/thermostat.css
@@ -1,18 +1,27 @@
 body {
   font-size: 50pt;
+  font-family: 'Montserrat', sans-serif;
 }
 
 article {
   text-align: center;
-  margin: auto;
   margin-top: 15%;
+}
 
+h3 {
+  font-size: 30pt;
+  margin-top: 0;
 }
 
 button {
   font-size: 16pt;
   border-radius: 4px;
-  background-color: #00ccff;
+  background-color: #AFEEEE;
+  border: 2px solid #96CDCD;
+}
+
+.wrap {
+  text-align: center;
 }
 
 .lbl {
@@ -24,6 +33,8 @@ button {
   border-radius: 100px;
   cursor: pointer;
   transition: all 0.3s ease;
+  margin: auto;
+  margin-top: 10px;
 }
 
 .lbl:after {
