--- a/css/thermostat.css
+++ b/css/thermostat.css
@@ -20,6 +20,18 @@ button {
   border: 2px solid #96CDCD;
 }
 
+.text--red {
+  color: red;
+}
+
+.text--orange {
+  color: orange;
+}
+
+.text--green {
+  color: green;
+}
+
 .wrap {
   text-align: center;
 }
