--- a/css/thermostat.css
+++ b/css/thermostat.css
@@ -25,6 +25,14 @@ img {
   height: 150px;
 }
 
+input {
+  display: block;
+  margin: auto;
+  font-size: 30pt;
+  margin-bottom: 20px;
+  margin-top: 150px;
+}
+
 .text--red {
   color: red;
 }
@@ -44,7 +52,7 @@ img {
 }
 
 .weather, .weather_temp {
-  font-size: 35pt;
+  font-size: 30pt;
   margin-top: 20px;
 }
 
