--- a/css/thermostat.css
+++ b/css/thermostat.css
@@ -30,7 +30,8 @@ input {
   margin: auto;
   font-size: 30pt;
   margin-bottom: 20px;
-  margin-top: 150px;
+  margin-top: 100px;
+  width: 350px;
 }
 
 .text--red {
@@ -47,7 +48,7 @@ input {
 
 .get_weather {
   font-size: 30pt;
-  border-radius: 4px;
+  border-radius: 8px;
   text-align: center;
 }
 
